# Whisper

./: .gitignore  .gitmodules  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
.github/actions/commit-and-push/: action.yml
.github/workflows/: build-native-dsp.yml
.kotlin/metadata/kotlinTransformedCInteropMetadataLibraries/: .sample-nativeTest.cinteropLibraries.json  .whisper-appleTest.cinteropLibraries.json
gradle/: libs.versions.toml
sample/: build.gradle.kts
sample/src/androidMain/: AndroidManifest.xml
sample/src/androidMain/kotlin/com/whisper/sample/: MainActivity.kt
sample/src/commonMain/kotlin/com/whisper/sample/: App.kt
sample/src/desktopMain/kotlin/com/whisper/sample/: Main.kt
sample/src/iosMain/kotlin/com/whisper/sample/: Main.kt
whisper/: build.gradle.kts
whisper-audio/: build.gradle.kts
whisper-audio/src/androidMain/: AndroidManifest.xml
whisper-audio/src/androidMain/kotlin/com/whisper/audio/: AndroidAudioEngine.kt  (+2 more)
whisper-core/: build.gradle.kts
whisper-core/src/androidMain/: AndroidManifest.xml
whisper-dsp/: build.gradle.kts
whisper-dsp/prebuilt/: .gitignore
whisper-dsp/prebuilt/desktop/macos/lib/: libliquid.dylib
whisper-dsp/prebuilt/ios/lib/: libliquid.dylib
whisper-dsp/src/androidMain/: AndroidManifest.xml
whisper-dsp/src/androidMain/cpp/: CMakeLists.txt  bandpass_filter.cpp  fft_processor.cpp  signal_generator.cpp
whisper-dsp/src/nativeInterop/cinterop/: liquid_ios.def  liquid_linux.def  liquid_macos.def  liquid_win.def
whisper/src/androidMain/: AndroidManifest.xml
(+56 files in other folders)
